# yake

./: .gitignore  404.html  README.md  index.html  index.txt  package-lock.json  pyproject.toml
.github/workflows/: pylint.yml  resultados.yml  test.yml
docs/: --home.html  --home.txt  -getting-started.html  -getting-started.txt  -related-projects.html  -related-projects.txt  CONTRIBUTING.rst  about.html  about.txt
docs-site/: README.md
docs-site/app/(home)/: page.tsx
docs-site/content/docs/: --home.mdx  -getting-started.mdx  -related-projects.mdx  _meta.json  about.mdx
docs-site/content/docs/Documentation/core/: Levenshtein.mdx  highlight.mdx  yake.mdx
docs-site/content/docs/Documentation/data/: composedword.mdx  datacore.mdx  features.mdx  singleword.mdx
docs-site/public/: 1YAKE.ipynb
docs/Documentation/core/: Levenshtein.html  Levenshtein.txt  highlight.html  highlight.txt  yake.html  yake.txt
docs/Documentation/data/: composedword.html  composedword.txt  datacore.html  datacore.txt  singleword.html  singleword.txt  utils.html  utils.txt
tests/: README.md  __init__.py  test_features.py  test_lemmatization.py  test_yake.py
yake/: __init__.py  cli.py
yake/core/: Levenshtein.py  __init__.py  highlight.py  yake.py
yake/data/: composed_word.py  core.py  features.py  single_word.py  utils.py
